# Bomberman

./: .gitignore  Astar.cpp  CMakeLists.txt  Makefile  Map.hpp  Own.cpp  README.md  conanfile.txt  linux.profile
app/: CMakeLists.txt
app/src/: AMainLoop.cpp  AMainLoop.hpp  Bomberman.cpp  Bomberman.hpp  ControlMenu.cpp  ControlMenu.hpp  GameState.cpp  GameState.hpp  Input.cpp  Input.hpp  Menu.cpp  Menu.hpp  main.cpp
core/src/: AMainLoop.hpp  Bomberman.cpp
engine/: CMakeLists.txt
engine/include/: Engine.hpp  EngineEvent.hpp  GameState.hpp  ICollider.hpp  Input.hpp
engine/src/: Engine.cpp
models/: CMakeLists.txt
models/include/: Ballom.hpp  Bombs.hpp  Enemies.hpp  EnemiesList.hpp  Enemy.hpp  EnemyType.hpp  Finder.hpp  GameState.hpp  ICollider.hpp  IEnemy.hpp  Map.hpp  PickUps.hpp  Pickups.hpp  Player.hpp  RNG.hpp
models/src/: Ballom.cpp  Bombs.cpp  Enemies.cpp  EnemiesList.cpp  Enemy.cpp  Finder.cpp  GameState.cpp  IEnemy.cpp  Map.cpp  Pickups.cpp  Player.cpp  RNG.cpp
renderer/: CMakeLists.txt
renderer/include/: Camera.hpp  Mesh.hpp  Renderer.hpp
renderer/include/interface/: IRenderable.hpp
renderer/res/models/box/: wall.mtl
renderer/res/models/pig/: pignew.dae
renderer/res/models/playerHead/: textureA.png~  untitled.mtl
renderer/res/models/robot/: tankbot.dae  tankbot.ms3d  tankbot.smd
renderer/res/models/shoe/: shoel.mtl  shoer.mtl
renderer/res/models/ubomb/: untitled.dae  untitled.mtl
renderer/res/models/wall/: wall.mtl
renderer/res/shaders/: fragmentShader.glsl  textf.glsl  textv.glsl  vertexShader.glsl
renderer/res_old/models/ghost/: Ghost.mtl
renderer/res_old/shaders/: fragmentShader.glsl
renderer/src/: Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  GuiChar.cpp  GuiChar.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Particle.cpp  Particle.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Square.cpp  Square.hpp  Swarm.cpp  Swarm.hpp  main.cpp
renderer3D/include/: Animation.hpp  Model.hpp  Renderer.hpp
renderer3D/res/models/Dynamite/: dinamite.blend  dinamite.mtl
renderer3D/res/shaders/: fragmentShader.glsl  vertexShader.glsl
renderer3D/src/: Animation.cpp  Camera.cpp  Model.cpp  Renderer.cpp
scripts/: fetch_resources.bash  install_brew.bash  install_brew_deps.bash
sound/: CMakeLists.txt
sound/include/: Sound.hpp
sound/src/: Sound.cpp
